--- a/members.html
+++ b/members.html
@@ -59,7 +59,7 @@
 				<tr>
 					<td>Wiryawan</td>
 					<td>Android (Java), Java</td>
-					<td>Game Dev, Web Dev</td>
+					<td>AI, Android (Native and non-Native)</td>
 					<td>✅</td>
 				</tr>
 			</tbody>
