--- a/members.html
+++ b/members.html
@@ -62,6 +62,12 @@
 					<td>AI, Android (Native and non-Native)</td>
 					<td>✅</td>
 				</tr>
+				<tr>
+					<td>HaikalLogic</td>
+					<td>Android (Java), Java</td>
+					<td>AI, Android (Native and non-Native)</td>
+					<td>✅</td>
+				</tr>
 			</tbody>
 		</table>
 </body>
